InsuranceOrg/force-app/main/default/objects/vlocity_ins__AttributeBinding__c/vlocity_ins__AttributeBinding__c.object-meta.xml
<CustomObject>
    <description>Registers the binding of a Vlocity Attribute to a specific field in a specified object. The configured or default value of the Vlocity Attribute will be maintained in the specified field.</description>
    <label>Vlocity Attribute Binding</label>
    <nameField>
        <label>Attribute Binding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Attribute Bindings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>