InsuranceOrg/force-app/main/default/objects/vlocity_ins__AttributeBinding__c/fields/vlocity_ins__AttributeCategoryId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttributeCategoryId__c</fullName>
    <formula>vlocity_ins__AttributeId__r.vlocity_ins__AttributeCategoryId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Category</label>
    <type>Text</type>
</CustomField>