InsuranceOrg/force-app/main/default/objects/vlocity_ins__AttributeBinding__c/fields/vlocity_ins__AttributeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttributeId__c</fullName>
    <label>Vlocity Attribute</label>
    <referenceTo>vlocity_ins__Attribute__c</referenceTo>
    <relationshipLabel>Vlocity Attribute Bindings</relationshipLabel>
    <relationshipName>VlocityAttributeBindings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>