InsuranceOrg/force-app/main/default/objects/vlocity_ins__AttributeBinding__c/fields/vlocity_ins__ObjectClassId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ObjectClassId__c</fullName>
    <label>Object Class</label>
    <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
    <relationshipLabel>Vlocity Attribute Bindings</relationshipLabel>
    <relationshipName>VlocityAttributeBindings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>